# VisPro

./: .gitignore  CMakeLists.txt  INSTALL.vcxproj  Python_link_error_fix.py  Visualisierung_2.sln  Visualisierung_2.vcxproj
OpenGL/: ECTS.sln  settings.txt
OpenGL/Debug/: settings.txt
OpenGL/ECTS/: CutawaySurface.cpp  CutawaySurface.h  ECTS.vcxproj  Quad.cpp  Quad.h  QuadShader.cpp  QuadShader.h  SceneObjectManager.cpp  SceneObjectManager.h  ShadowMap.cpp  ShadowMap.h  Texture.cpp  Texture.h  UserInput.cpp  UserInput.h  ViewFrustum.cpp  ViewFrustum.h  main.cpp  main.cpp~
OpenGL/Models/: CubeGeoOnly.dae  Source.txt  anim_test.dae  ball.dae  diamond.dae  diamond_orig.dae  freihaus_v0_9_energy.dae  freihaus_v0_9_environment.dae
OpenGL/Release/: settings.txt  settings.txt~
OpenGL/Scene/: BoundingBox.cpp  BoundingBox.h  Camera.cpp  Camera.h~  Energy.cpp  Energy.h  Environment.cpp  Environment.h  Face.cpp  Geometry.cpp  Geometry.h  Item.cpp  Item.h  Light.h  Mesh.cpp  Mesh.h  PointLight.cpp  PointLight.h  SceneImporter.cpp
OpenGL/Shader/: BlinnPhongShader.cpp  BlinnPhongShader.frag  BlinnPhongShader.h  FragmentShader.hlsl  NormalShader.h  QuadShader.cpp  QuadShader.frag  QuadShader.h  QuadShader.vert  Shader.cpp  Shader.h  TextureShader.frag  TextureShader.h  ZBufferShader.cpp  ZBufferShader.frag  ZBufferShader.geom  ZBufferShader.h  ZBufferShader.vert
OpenGL/build-Debug/: vc120.idb
OpenGL/build-Release/: ECTS.vcxprojResolveAssemblyReference.cache
Source/: ChamferTransform.cxx  Visualisierung_2.cxx
VTK/Source/: ChamferTransform.cxx  ChamferTransform.h  (+1 more)
(+88 files in other folders)
